@@ -1,5 +1,15 @@
 2014-06-20  Anders Carlsson  <andersca@apple.com>
 
+        Add encoding and decoding support for WTF::Optional
+        https://bugs.webkit.org/show_bug.cgi?id=134125
+
+        Reviewed by Andreas Kling.
+
+        * wtf/Optional.h:
+        (WTF::Optional::operator=):
+
+2014-06-20  Anders Carlsson  <andersca@apple.com>
+
         Add copy/move constructors and assignment operators to WTF::Optional
         https://bugs.webkit.org/show_bug.cgi?id=134119
 
